# License-Plate-Recognition

./: README.md
camera_driver/camera_driver/: Makefile  capture.c  capture.h
camera_driver/camera_driver/demo/: picture1.ppm  picture10.ppm  picture3.ppm  picture4.ppm  picture5.ppm  picture9.ppm
client/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  main.h
opencv/: Makefile  README.md  license_plates.txt  main.cpp  main.h
server/: Makefile  capture.c  capture.h  server  server.c
server/demo/: picture2.ppm  picture6.ppm  picture7.ppm  picture8.ppm
